sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: not found: value lgr
  lgr = getNombreValeurs()
  ^AlgInsertionSort:4: error: not found: value lgr
  for (i<-0 to lgr-1){
               ^AlgInsertionSort:12: error: not found: value i
  i=n-1
  ^AlgInsertionSort:13: error: not found: value i
  while(plusPetitQue(n,i)){
                       ^AlgInsertionSort:14: error: not found: value i
    echange(i,n)
            ^AlgInsertionSort:15: error: not found: value i
    i=i-1
    ^