sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  lgr = getNombreValeurs()
  for (i<-0 to lgr-1){
    insert(i)
  }
}



def insert(n:Int){
  i=n-1
  while(plusPetitQue(n,i)){
    echange(i,n)
    i=i-1
  }
}